--- a/main.html
+++ b/main.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dog Breeds</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <h1>Dog Breeds</h1>
+    <p>Click on the images to learn more about these amazing dog breeds.</p>
 
+    <!-- Unordered List of Dog Breeds -->
+    <ul>
+        <!-- Golden Retriever -->
+        <li>
+            <a href="https://en.wikipedia.org/wiki/Golden_Retriever" target="_blank">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/6/6e/Golde33443retriever.jpg" alt="Golden Retriever" width="300">
+            </a>
+        </li>
+
+        <!-- Poodle -->
+        <li>
+            <a href="https://en.wikipedia.org/wiki/Poodle" target="_blank">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/2/28/Poodle_Toy_600.jpg" alt="Poodle" width="300">
+            </a>
+        </li>
+    </ul>
 </body>
-
 </html>
