--- a/main.html
+++ b/main.html
@@ -14,14 +14,14 @@
         <!-- Golden Retriever -->
         <li>
             <a href="https://en.wikipedia.org/wiki/Golden_Retriever" target="_blank">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/6/6e/Golde33443retriever.jpg" alt="Golden Retriever" width="300">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/BassetHound_profil.jpg" alt="Golden Retriever" width="300">
             </a>
         </li>
 
         <!-- Poodle -->
         <li>
             <a href="https://en.wikipedia.org/wiki/Poodle" target="_blank">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/2/28/Poodle_Toy_600.jpg" alt="Poodle" width="300">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Full_attention_%288067543690%29.jpg/1280px-Full_attention_%288067543690%29.jpg" alt="Poodle" width="300">
             </a>
         </li>
     </ul>
